crates/arteziac/tests/snapshots/lower__for_basic.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main() {\\n for i in 0 .. 10 {\\n let x = 1\\n }\\n}\")"
---
func main() -> Unit {
  local %0: Int (i)
  local %1: Int
  local %2: Int (x)
  bb0:
    v0 = const.int 0
    store %0, v0
    v1 = const.int 10
    store %1, v1
    jump bb1
  bb1:
    v2 = load %0
    v3 = load %1
    v4 = cmp.lt v2, v3
    branch v4 -> bb2, bb4
  bb2:
    v5 = const.int 1
    store %2, v5
    jump bb3
  bb3:
    v6 = load %0
    v7 = const.int 1
    v8 = add v6, v7
    store %0, v8
    jump bb1
  bb4:
    return
}
