crates/arteziac/tests/snapshots/lower__for_containing_while.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(d: Bool) { for i in 0 .. 10 { while d { break; } } }\")"
---
func main(%0) -> Unit {
  local %0: Bool (d)
  local %1: Int (i)
  local %2: Int
  bb0:
    v0 = const.int 0
    store %1, v0
    v1 = const.int 10
    store %2, v1
    jump bb1
  bb1:
    v2 = load %1
    v3 = load %2
    v4 = cmp.lt v2, v3
    branch v4 -> bb2, bb4
  bb2:
    jump bb5
  bb3:
    v6 = load %1
    v7 = const.int 1
    v8 = add v6, v7
    store %1, v8
    jump bb1
  bb4:
    v9 = const.unit
    return
  bb5:
    v5 = load %0
    branch v5 -> bb6, bb7
  bb6:
    jump bb7
  bb7:
    jump bb3
}
