crates/arteziac/tests/snapshots/lower__for_hi_evaluated_once.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func f() -> Int { return 10; }  func main() { for i in 0 .. f() { ; } }\")"
---
func f() -> Int {
  bb0:
    v0 = const.int 10
    return v0
}

func main() -> Unit {
  local %0: Int (i)
  local %1: Int
  bb0:
    v0 = const.int 0
    store %0, v0
    v1 = call f ()
    store %1, v1
    jump bb1
  bb1:
    v2 = load %0
    v3 = load %1
    v4 = cmp.lt v2, v3
    branch v4 -> bb2, bb4
  bb2:
    jump bb3
  bb3:
    v5 = load %0
    v6 = const.int 1
    v7 = add v5, v6
    store %0, v7
    jump bb1
  bb4:
    v8 = const.unit
    return
}
