crates/arteziac/tests/snapshots/lower__for_uses_loop_var.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(n: Int) {\\n for i in 0 .. n {\\n let x = i\\n }\\n}\")"
---
func main(%0) -> Unit {
  local %0: Int (n)
  local %1: Int (i)
  local %2: Int
  local %3: Int (x)
  bb0:
    v0 = const.int 0
    store %1, v0
    v1 = load %0
    store %2, v1
    jump bb1
  bb1:
    v2 = load %1
    v3 = load %2
    v4 = cmp.lt v2, v3
    branch v4 -> bb2, bb4
  bb2:
    v5 = load %1
    store %3, v5
    jump bb3
  bb3:
    v6 = load %1
    v7 = const.int 1
    v8 = add v6, v7
    store %1, v8
    jump bb1
  bb4:
    return
}
