crates/arteziac/tests/snapshots/lower__if_else_if_chain.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(a: Bool, b: Bool) { if a { let x = 1; } else if b { let y = 2; } else { let z = 3; } }\")"
---
func main(%0, %1) -> Unit {
  local %0: Bool (a)
  local %1: Bool (b)
  local %2: Int (x)
  local %3: Int (y)
  local %4: Int (z)
  bb0:
    v0 = load %0
    branch v0 -> bb1, bb3
  bb1:
    v1 = const.int 1
    store %2, v1
    v2 = const.unit
    jump bb2
  bb2:
    v9 = const.unit
    return
  bb3:
    v3 = load %1
    branch v3 -> bb4, bb6
  bb4:
    v4 = const.int 2
    store %3, v4
    v5 = const.unit
    jump bb5
  bb5:
    v8 = const.unit
    jump bb2
  bb6:
    v6 = const.int 3
    store %4, v6
    v7 = const.unit
    jump bb5
}
