crates/arteziac/tests/snapshots/lower__if_else_statement.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(c: Bool) { if c { let x = 1; } else { let y = 2; } }\")"
---
func main(%0) -> Unit {
  local %0: Bool (c)
  local %1: Int (x)
  local %2: Int (y)
  bb0:
    v0 = load %0
    branch v0 -> bb1, bb3
  bb1:
    v1 = const.int 1
    store %1, v1
    v2 = const.unit
    jump bb2
  bb2:
    v5 = const.unit
    return
  bb3:
    v3 = const.int 2
    store %2, v3
    v4 = const.unit
    jump bb2
}
