crates/arteziac/tests/snapshots/lower__if_statement_unit.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(c: Bool) {\\n if c {\\n let x = 1\\n }\\n}\")"
---
func main(%0) -> Unit {
  local %0: Bool (c)
  local %1: Int (x)
  bb0:
    v0 = load %0
    branch v0 -> bb1, bb2
  bb1:
    v1 = const.int 1
    store %1, v1
    v2 = const.unit
    jump bb2
  bb2:
    v3 = const.unit
    return
}
