crates/arteziac/tests/snapshots/lower__lower_binary_precedence.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main() {\\n let x = 1 + 2 * 3\\n}\")"
---
func main() -> Unit {
  local %0: Int (x)
  bb0:
    v0 = const.int 1
    v1 = const.int 2
    v2 = const.int 3
    v3 = mul v1, v2
    v4 = add v0, v3
    store %0, v4
    return
}
