crates/arteziac/tests/snapshots/lower__lower_call.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func f(a: Int) {}  func main() { f(1 + 2); }\")"
---
func f(%0) -> Unit {
  local %0: Int (a)
  bb0:
    v0 = const.unit
    return
}

func main() -> Unit {
  bb0:
    v0 = const.int 1
    v1 = const.int 2
    v2 = add v0, v1
    v3 = call f (v2)
    v4 = const.unit
    return
}
